--- a/TRMDataManager/packages.config
+++ b/TRMDataManager/packages.config
@@ -41,10 +41,13 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net47" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net47" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net47" />
   <package id="System.Memory" version="4.5.3" targetFramework="net47" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net47" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
